fix settings cutting off other nav items on small vertical screens

--- a/app/styles/beta.css
+++ b/app/styles/beta.css
@@ -104,10 +104,11 @@ body {
     }
 
     .lastNavLink {
-        position: absolute;
-        bottom: 0;
-        left: 0;
-        right: 0;
+        /* position: absolute; */
+        /* bottom: 0; */
+        /* left: 0; */
+        /* right: 0; */
+        background: #333;
     }
 
 /* Tasks
